@@ -23,6 +23,9 @@
     <selenium.version>4.0.0</selenium.version>
     <webdrivermanager.version>5.0.3</webdrivermanager.version>
 
+    <aspectj.version>1.9.5</aspectj.version>
+    <allure.version>2.14.0</allure.version>
+
   </properties>
 
   <profiles>
@@ -61,6 +64,13 @@
       <id>homework3-test-suite</id>
       <properties>
         <suiteXml>${project.basedir}/src/test/resources/com/epam/tc/hw3/Homework3TestSuite.xml</suiteXml>
+      </properties>
+    </profile>
+
+    <profile>
+      <id>homework4-test-suite</id>
+      <properties>
+        <suiteXml>${project.basedir}/src/test/resources/com/epam/tc/hw4/Homework4TestSuite.xml</suiteXml>
       </properties>
     </profile>
 
@@ -103,7 +113,17 @@
       <version>${webdrivermanager.version}</version>
     </dependency>
 
+    <dependency>
+      <groupId>io.qameta.allure</groupId>
+      <artifactId>allure-testng</artifactId>
+      <version>${allure.version}</version>
+    </dependency>
 
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-simple</artifactId>
+      <version>1.7.32</version>
+    </dependency>
 
   </dependencies>
 
@@ -147,13 +167,39 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <version>${surefireplugin.versoin}</version>
         <configuration>
+          <argLine>
+            --illegal-access=permit
+            -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
+          </argLine>
           <testFailureIgnore>true</testFailureIgnore>
           <suiteXmlFiles>
             <suiteXmlFile>${suiteXml}</suiteXmlFile>
           </suiteXmlFiles>
         </configuration>
+        <dependencies>
+          <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjweaver</artifactId>
+            <version>${aspectj.version}</version>
+          </dependency>
+        </dependencies>
       </plugin>
     </plugins>
   </build>
+
+  <reporting>
+    <excludeDefaults>true</excludeDefaults>
+    <plugins>
+      <plugin>
+        <groupId>io.qameta.allure</groupId>
+        <artifactId>allure-maven</artifactId>
+        <version>2.10.0</version>
+        <configuration>
+          <reportVersion>${allure.version}</reportVersion>
+        </configuration>
+
+      </plugin>
+    </plugins>
+  </reporting>
 
 </project>
